src/components/text-editor/prosemirror-adapter/prosemirror-adapter.scss
@use '../../../style/internal/shared_input-select-picker.scss';

:host(limel-prosemirror-adapter) {
    display: block;
}

* {
    box-sizing: border-box;
}

.ProseMirror-menubar-wrapper {
    display: grid;
    grid-template-rows: auto 1fr;
}

.ProseMirror-textblock-dropdown {
    min-width: 3em;
}

.ProseMirror-tooltip {
    .ProseMirror-menu {
        width: -webkit-fit-content;
        width: fit-content;
        white-space: pre;
    }
}

limel-action-bar {
    --action-bar-border-radius: 0.25rem;

    position: sticky;
    z-index: 1;
    top: 1px;
    background-color: shared_input-select-picker.$background-color-normal;
    backdrop-filter: blur(0.5rem);
    -webkit-backdrop-filter: blur(0.5rem);

    // prevents visual defects that can appears
    // due to the backdrop-filter and closeness to borders
    margin: 0 1px;
    width: calc(100% - 2px);
}

.ProseMirror {
    position: relative;
    word-wrap: break-word;
    white-space: pre-wrap;
    white-space: break-spaces;
    -webkit-font-variant-ligatures: none;
    font-variant-ligatures: none;
    font-feature-settings: 'liga' 0;

    padding: var(--limel-text-editor-padding);

    [draggable][contenteditable='false'] {
        user-select: text;
    }

    &:focus-visible {
        outline: none;
    }
}

.ProseMirror-hideselection {
    * {
        &::selection {
            background: transparent;
        }

        &::-moz-selection {
            background: transparent;
        }
    }

    caret-color: transparent;
}

.ProseMirror-selectednode {
    outline: 0.125rem solid rgb(var(--color-sky-light));
}

li.ProseMirror-selectednode {
    outline: none;

    &:after {
        content: '';
        position: absolute;
        left: -2rem;
        right: -0.125rem;
        top: -0.125rem;
        bottom: -0.125rem;
        border: 0.125rem solid rgb(var(--color-sky-light));
        pointer-events: none;
    }
}

img.ProseMirror-separator {
    display: inline !important;
    border: none !important;
    margin: 0 !important;
}

@import '../../markdown/partial-styles/blockquotes';
@import '../../markdown/partial-styles/body-text';
@import '../../markdown/partial-styles/definition-lists';
@import '../../markdown/partial-styles/headings';
@import '../../markdown/partial-styles/lists';
@import '../../markdown/partial-styles/pre-code';
@import '../../markdown/partial-styles/tables';

